- Improvement: Allow to filter registrations for RAIDES survey by degree types [#qubIT-Fenix-5804]

2.24.2 (10-09-2024)
- Refactor: Migration of bibliographic references from value types to domain entities [#qubIT-Fenix-1595]

2.24.1 (17-07-2024)
- Improvement: Setup qualification filling for Raides on post login [#qubIT-Fenix-5522]

2.24.0 (03-07-2024)
- Improvement: Refactors code due to poi upgrade [#qubIT-Omnis-6199]

2.23.0 (27-06-2024)
- Refactor: Moves xls classes to core api [#qubIT-Omnis-6038]

2.22.0 (17-06-2024)
- Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]

2.21.0 (04-06-2024)
- Refactor: Removes academic treasury ui dependency [#qubIT-Omnis-5884]

2.20.0 (16-05-2024)
- Refactor: Removes ulisboa tools dependency [#qubIT-Omnis-5836]

2.19.1 (15-05-2024)
- Refactor: Moves spring controllers to ulisboa specifications [#qubIT-Omnis-5831]

2.19.0 (18-04-2024)
- Refactor: Removes usages of qub docs dependencies [#qubIT-Fenix-5085]

2.18.0 (17-04-2024)
- Refactor: Updates zip4j logic to version 2.11.5 [#qubIT-Omnis-5739]

2.17.0 (17-04-2024)
- Refactor: Removes usages of commons-httpclient [#qubIT-Omnis-5730]

2.16.12 (10-04-2024)
- Bug fix: PRIES salary bonus (update XSD) [#UL-REIT-3777]

2.16.11 (09-04-2024)
- Refactor: Update XSD to RAIDES23 (phase 2) [#qubIT-Fenix-5128]
- Bug fix: Fix RAIDES action for multiple active registrations with scholarships [#UL-ISA-4962]

2.16.10 (25-03-2024)
- New Feature: add bonus salary XSD [#UL-REIT-3777]
- Bug fix: Validate the person gender [#qubIT-Fenix-5044]

2.16.9 (15-03-2024)
- Bug fix: Allow null on enroled ects (valid for PhDs) [#qubIT-Fenix-5043]

2.16.8 (13-03-2024)
- Bug fix: SAS: add missing translations [#UL-IGOT-1620]

2.16.7 (06-03-2024)
2.16.6 (05-03-2024)
- Bug fix: RAIDES: validate ingression only when the field is mandatory [#UL-FMD-1067]
- Bug fix: RAIDES: add missing labels

2.16.5 (27-02-2024)