@@ -1,4 +1,5 @@
 - Improvement: Allow to filter registrations for RAIDES survey by degree types [#qubIT-Fenix-5804]
+- Improvement: Remove unnecessary RAIDES survey questions to mobility students [#qubIT-Fenix-5805]
 
 2.24.2 (10-09-2024)
 - Refactor: Migration of bibliographic references from value types to domain entities [#qubIT-Fenix-1595]
